feat: connect relevant validation middleware with schemas
